# credit-scoring-api

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  startup.sh
.github/workflows/: cd.yml  main.yml
model_artifacts/: credit_scoring_model.joblib
src/: config.py  data_processing.py  train.py
src/api/: main.py  security.py
src/dashboard/: app_dashboard.py
src/database/: database.py  models.py  schemas.py
src/scripts/: hash_password.py  init_db.py  locustfile.py  profile_api.py
tests/: test_api.py  test_dashboard.py  test_data_processing.py  test_train.py
tests/fixtures/: sample_test.csv  sample_train.csv
